fix sidebar z-index

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,7 @@ body, html, *{
   flex-direction: column;
   width: max(30vw,400px);
   height: 100vh;
+  z-index:1;
   padding: 3rem 2rem; 
   background-color: rgba(255,255,255,0.9);
   box-shadow: 10px 10px 10px rgba(0,0,0,0.1);
@@ -28,7 +29,6 @@ body, html, *{
 
 .map-container { 
   position: fixed;
-  z-index: -1; 
   width: 100vw; 
   height: 100vh; 
   overflow:hidden;
